--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   },
   "homepage": "https://bvlinger.github.io/algorithm-visualizer",
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "autoprefixer": "^10.4.22",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
